style.css
/* document */

body {
	margin: 0;
	font-family: Montserrat, sans-serif;
	/* font-family: 'Source Code Pro', monospace; */
	font-weight: normal;
}

* {
	box-sizing: border-box;
	text-decoration: none;
}

/* page-specific */

.about-bg {
	background: #b6c1c2;
	}

.work-bg {
	background-color: #141517;
}

.about-text {
	color: rgba(0, 0, 0, 1.0);
}

.work-text {
	color: rgba(255, 255, 255, 1.0);
}

/* menu */

.menu {
	display: flex;
	flex-direction: column;
	position: fixed;
	width: 160px;
	height: 100vh;
	padding: 8px;
	z-index: 5;
}

.menu-background {
	z-index: 1;
}

h1 {
	display: none;
}

#ascii-abbreviation {
	display: none;
}

.ascii-title {
	margin: auto 0px;
	font-size: 0.6em;
}

.ascii-header {
	margin: 0;
	font-family: "Source Code Pro", monospace;
	font-weight: 900;
}

nav {
	font-weight: 300;
	text-transform: uppercase;
	font-size: 1.5em;
}

ul {
	list-style: none;
	padding: 0;
	margin: 0;
}

/* content */

.main-grid {
	display: grid;
	grid-template-columns: 100%;
	/* padding: 8px; */
}

.content-top {
	height: 100vh;
	display: flex;
	flex-direction: column;
	justify-content: center;
	/* margin: 0px; */
}

.content {
	display: flex;
	flex-direction: column;
	justify-content: center;
	margin: 0px;
}

article, .container-video {
	margin: 0px 8px 0px 180px;
}

/* links */

a {
	background: linear-gradient(to right, #30CFFF 0%, #FF0867 25%, #30CFFF 50%, #FF0867 75%, #30CFFF 100%);
	background-size: 400% 400%;
	-webkit-background-clip: text;
	/* -webkit-text-fill-color: transparent; */
	text-decoration: underline;
	transition: color 2s;
	color: inherit;
	animation: grad1 20s linear infinite;
}


/* temp fix for iOS gradient issue */
/* 
a {
	color: inherit;
	text-decoration: underline;
}

a:hover {
	color: #880044;
}
 */
/* end temp fix */

li>a {
	text-decoration: none;
}

li>a.work {
	text-decoration: none;
	color: rgba(1., 1., 1., 1.);
}

a:hover {
	color: rgba(0, 0, 0, 0.2);
}

/* ascii art */

.ascii {
	font-size: calc((100vw - 196px) * 0.02);
	line-height:1;
	padding: 0px 8px 0px 180px;
	/* position: static; */
}

#ascii-frontpage-1 {
	transform: rotate(1deg);
	position: absolute;
	background: linear-gradient(30deg, #30CFFF 0%, #FF0867 25%, #30CFFF 50%, #FF0867 75%, #30CFFF 100%);
	background-size: 400% 400%;
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
	animation: frontpage-gradient 200s linear infinite;
}

#ascii-frontpage-2 {
	transform: rotate(-1deg);
	position: absolute;
	background: linear-gradient(160deg, #FF0867 0%, #30CFFF 25%, #FF0867 50%, #30CFFF 75%, #FF0867 100%);
	background-size: 400% 400%;
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
	animation: frontpage-gradient 200s linear infinite;
}

#ascii-frontpage-3 {
	color: rgba(0, 0, 0, 0.0);
}

@keyframes frontpage-gradient {
	0%{background-position:0% 50%}
	50%{background-position:100% 50%}
	100%{background-position:0% 50%}
}

/* videos */

.video-insert {
	position: absolute; 
	right: 0; 
	bottom: 0;
	height: auto;
	z-index: 2;
	overflow: hidden;
}

.project-title {
	color: #fff;
	position: absolute;
	bottom: 0%;
	right: 20px;
	font-size: 2em;
	text-transform: uppercase;
	z-index: 3;
}

.container {
	display: grid;
	/* position: absolute; */
	/* top: 100vh; */
	/* padding: 0px; */
	grid-template-columns: 1fr;
	grid-gap: 10px;
	max-width: 100vw;
	/* z-index: -1; */
}

.container-video {
	overflow: hidden;
	padding-top: 56.25%;
	position: relative;
}
 
.container-video iframe {
	border: 0;
	height: 100%;
	left: 0;
	position: absolute;
	top: 0;
	right:20px;
	width: 100%;
}
/* mobile */

@media (max-width: 700px) {
	.main-grid {
			grid-template-columns: 100%;
			grid-gap: 10px;
	}

	.menu {
		width: 100%;
		height: auto;
		flex-direction: row;
		justify-content: flex-start;
		white-space: nowrap;
	}

	.menu-background {
		position: fixed;
		width: 100%;
		height: 10vw;
		background-color: #141517;
	}

	h1 {
		display:none;
	}

	#abbreviation {
		font-weight: 500;
		display: inline-block;
		font-size: 6vw;
		margin: 0;
	}

	.ascii-title {
		display: none;
	}

	#ascii-abbreviation {
		font-weight: 500;
		display: inline-block;
		width: 9vw;
		font-size: 1.6vw;
		margin: 0.5vw 3vw 0px 0px;
		font-family: "Source Code Pro", monospace;
	}

	nav {
		font-size: 6vw;
	}

	.ascii {
		font-size: calc((100vw - 16px) * 0.02);
		/* margin: 20vw 0px 0px 0px; */
		/* padding: 0px */;
		padding: 10vw 8px 0px 8px;
	}

	.ascii-header {
		display: inline-block;
	}

	.content-top {
		justify-content: flex-start;
	}
	
	article {
		margin: 0;
		padding: 8px;
	}

	.container-video {
		padding-top: 56.25%;
		margin: 0px 8px 8px 8px;
	}

	li {
		display: inline-block;
		padding: 0 1vw;
	}
}

